# katarina

./: Readme.md  katarina.cabal
assets/: prelude.php
examples/: example1.sh  example2.sh  example3.sh
examples/input/input1/: ifile1.txt  pfile1.txt
examples/input/input1/assets/: index.php
examples/input/input2/: ifile1.txt  pfile1.txt  pfile2.txt
examples/input/input3/: ifile1.txt  pfile1.txt
examples/input/input3/assets/: data.json  index.php
examples/output/out1/: data.json  test.php
examples/output/out1/js/: F_OneList.js  Listexample.js  Listexample_Length.js  Listexample_Summe.js  Listexample_TREE.js  Listexample_Text.js  Listexample_Text2.js  Listexample_UL.js  OneList_Summe2.js  prelude.js
examples/output/out1/php/: F_OneList.php  Listexample.php  Listexample_Length.php  Listexample_Summe.php  Listexample_TREE.php  Listexample_Text.php  Listexample_Text2.php  Listexample_UL.php  OneList_Summe2.php
examples/output/out2/: example1.json  example2.json  index.php  test.php
examples/output/out2/js/: A1_I1.js  A1_I3.js  A1_I3Table.js  A2_I5.js  A3_ShowTestclasses.js  F_A1.js  F_A2.js  F_A3.js  Foo.js  Foo_I2.js  Foo_TREE.js  Foo_UL.js
examples/output/out2/php/: A1_I1.php  A1_I3.php  A1_I3Table.php  A2_I5.php  A3_ShowTestclasses.php  F_A1.php  F_A2.php  F_A3.php  Foo.php  Foo_I2.php  Foo_TREE.php  Foo_UL.php
examples/output/out3/: data2.json  test.php
src/: Assets.hs  Checker.hs  Compile.hs  CompileLib.hs  Gen.hs  GenAlg.hs  Main.hs  Misc.hs  PHPStub.hs  Parser.hs  StatementM.hs  ToJS.hs  ToPHP.hs  Tokenizer.hs  Types.hs  TypesParser.hs
(+10 files in other folders)
