
name:                katarina
version:             0.1.0.0
synopsis:            catamorphism based programming language
-- description:         
license:             BSD3
license-file:        LICENSE
author:              daniel van den eijkel
maintainer:          dvde@gmx.net
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable katarina
  main-is:             Main.hs
  other-modules:       Assets, Checker, Compile, CompileLib, Gen, GenAlg, Main, Misc, Parser, PHPStub, StatementM, ToJS, Tokenizer, ToPHP, Types, TypesParser
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, random, mtl, containers, directory, process, file-embed, bytestring, optparse-applicative
  hs-source-dirs:      src
  default-language:    Haskell2010
